# SMARTISH

./: Pipfile  README.md  mypy.ini  requirements.txt  setup.cfg
smartish/: __init__.py
smartish/actions/: __init__.py  discrete_action_space.py  social_preference_action_space.py
smartish/agents/: __init__.py  agent.py  agent_memory.py  base_agent.py  cognitive_hierarchy.py
smartish/agents/strategy/: __init__.py  agent_strategy.py  strategies.py
smartish/agents/strategy/agent_reasoning_strategy/: __init__.py  agent_reasoning_strategy.py
smartish/agents/strategy/env_specific_action_strategy/: __init__.py  env_specific_action_strategy.py
smartish/agents/strategy/signaling_action_strategy/: __init__.py  signaling_action_strategy.py
smartish/agents/strategy/social_preference_action_strategy/: __init__.py  social_preference_action_strategy.py
smartish/envs/: Observation.py  State.py  __init__.py  base_env.py  board.py  forward_model.py  observation.py  pseudo_reward.py  reward.py  state.py
smartish/envs/generic/: __init__.py  base_env.py  board.py  forward_model.py  observation.py  reward.py  state.py  viewer.py
smartish/envs/staghunt/: __init__.py  move_action_space.py  staghunt_board.py  staghunt_forward_model.py  staghunt_observation.py  staghunt_pseudo_reward.py  staghunt_reward.py  staghunt_state.py
smartish/viewers/: viewer.py
tests/actions/: test_discrete_action_space.py  test_social_preference_action_space.py
types/: discrete_action_space.pyi
types/smartish/actions/: __init__.pyi  discrete_action_space.pyi  social_preference_action_space.pyi
(+4 files in other folders)
