[metadata]
name = smartish
version = 0.1dev0
author = Joseph Blanchard
author_email = joe.blanchard4@gmail.com
description = Social Minds and Agent Reasoning Testbed for Inverse Inference and Signaling with Humans
url = https://github.com/claireyyang/SMARTISH
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    gym
